[package]
name = 'bholdus-chainbridge'
# Since a pallet always depends on frame-system, frame-support,
# we want to make keep our package versioning close to these frame dependencies.
# As this will help us to resolve conflicts easier if happened
version = '4.0.0-dev'
authors = ['dung.lam@bholdus.com']
edition = '2018'

# third-party dependencies
[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.serde]
version = "1.0.101"
optional = true

# primitives
[dependencies.sp-std]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.sp-runtime]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.sp-io]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.sp-core]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

# frame dependencies
[dependencies.frame-benchmarking]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
optional = true

[dependencies.frame-support]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.frame-system]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.pallet-balances]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'


[features]
default = ["std"]
std = [
	"codec/std",
	'scale-info/std',
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = ['frame-benchmarking']
