[package]
name = 'bholdus-chainbridge'
# Since a pallet always depends on frame-system, frame-support,
# we want to make keep our package versioning close to these frame dependencies.
# As this will help us to resolve conflicts easier if happened
version = '4.0.0-dev'
authors = ['dung.lam@bholdus.com']
edition = '2018'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
serde = { version = '1.0.101', optional = true }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'master' }


[features]
default = ["std"]
std = [
	"codec/std",
	'scale-info/std',
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = ['frame-benchmarking']
