[package]
name = "bholdus-currencies"
version = "1.0.19"
authors = ["Nhi Tran <nhi.tran@hawking.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.124", optional = true }

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.sp-io]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.frame-support]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.frame-system]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.bholdus-support]
default-features = false
package = "bholdus-support"
path = '../support'

[dev-dependencies.pallet-balances]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dev-dependencies.bholdus-tokens]
package = "bholdus-tokens"
path = '../tokens'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"bholdus-support/std",
	#"orml-utilities/std",
]
try-runtime = ["frame-support/try-runtime"]
