[package]
authors = ['Bholdus <https://github.com/bholdus>']
description = 'Bholdus DEX'
edition = '2018'
homepage = 'https://bholdus.com'
license = 'Unlicense'
name = 'bholdus-dex'
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07'}
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07' }

# Local dependencies
bholdus-primitives = {default-features = false, version = '3.0.0', path = '../../primitives'}
bholdus-support = {default-features = false, version = '3.0.0', path = '../support'}


[dev-dependencies]
serde = '1.0.119'
pallet-balances = {default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-07' }
bholdus-tokens = {default-features = false, version = '3.0.0', path = '../tokens'}
bholdus-currencies = {default-features = false, version = '3.0.0', path = '../currencies'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
