[package]
authors = ['Bholdus <https://github.com/bholdus>']
description = 'Bholdus DEX'
edition = "2021"
homepage = 'https://bholdus.com'
license = 'Unlicense'
name = 'bholdus-dex'
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = "1.0.19"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# external dependencies
[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

# Substrate dependencies
[dependencies.frame-benchmarking]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"
optional = true

[dependencies.frame-support]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.frame-system]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.sp-core]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.sp-runtime]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dependencies.sp-std]
version = "4.0.0-dev"
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

# Local dependencies
[dependencies.bholdus-primitives]
default-features = false
version = '4.0.0-dev'
path = '../../primitives/bholdus'

[dependencies.bholdus-support]
default-features = false
version = '4.0.0-dev'
path = '../support'

[dev-dependencies.serde]
version = '1.0.119'

[dev-dependencies.sp-io]
version = "4.0.0-dev"
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dev-dependencies.pallet-balances]
version = '4.0.0-dev'
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.23"

[dev-dependencies.bholdus-tokens]
version = '4.0.0-dev'
path = '../tokens'

[dev-dependencies.bholdus-currencies]
version = '4.0.0-dev'
path = '../currencies'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
