[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'bholdus-memo'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "1.0.14"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Substrate dependencies
[dependencies]
codec = { default-features = false, features = [
	"derive",
	"max-encoded-len",
], package = "parity-scale-codec", version = "2.2.0" }
scale-info = { default-features = false, features = [
	'derive',
], version = '1.0' }
frame-benchmarking = { default-features = false, git = 'https://github.com/bholdus/substrate.git', optional = true, branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", default-features = false, branch = "bholdus-monthly-2021-11" }
bholdus-primitives = { default-features = false, path = '../../primitives/bholdus' }

[dev-dependencies]
serde = '1.0.119'
sp-core = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
pallet-balances = { git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", default-features = false, branch = "bholdus-monthly-2021-11" }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'sp-runtime/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
]
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'bholdus-primitives/std',
	'pallet-timestamp/std',
]
try-runtime = [
	'frame-support/try-runtime',
	'pallet-timestamp/try-runtime',
]
