[package]
authors = ["Bholdus Technologies"]
description = "FRAME non fungible token management pallet"
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = "bholdus-nft"
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain.git'
version = "1.0.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.enumflags2]
version = '0.6.3'

[dependencies.serde]
optional = true
version = '1.0.124'

# [dependencies.max-encoded-len]
# default-features = false
# git = "https://github.com/BHONetwork/substrate.git"
# branch = "bho-polkadot-v0.9.18"
# version = '4.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'


[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"
optional = true

[dependencies.frame-support]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.frame-system]
default-features = false
# path = '../frame/system'
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

## Bholdus pallets

# Local dependencies
[dependencies.common-primitives]
default-features = false
path = '../../primitives/common'

## Bholdus libs

[dependencies.bholdus-support]
default-features = false
path = '../../pallets/support'

[dependencies.bholdus-support-nft]
default-features = false
package = 'support-nft'
path = '../../pallets/support/nft'

[dev-dependencies.sp-core]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dev-dependencies.sp-io]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dev-dependencies.pallet-balances]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dev-dependencies.pallet-utility]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	'scale-info/std',
	"enumflags2/serde",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"common-primitives/std",
	"bholdus-support/std",
	"bholdus-support-nft/std",
	"enumflags2/serde",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
