[package]
name = "pallet-integration"
version = "4.0.0-dev"
authors = ["Vu hoang <vuhoang2119@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Substrate dependencies
[dependencies]
codec = { default-features = false, features = [
	"derive",
	"max-encoded-len",
], package = "parity-scale-codec", version = "2.2.0" }
scale-info = { default-features = false, features = [
	'derive',
], version = '1.0' }
frame-benchmarking = { default-features = false, git = 'https://github.com/bholdus/substrate.git', optional = true, branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
pallet-contracts = { version = "4.0.0-dev", git = "https://github.com/bholdus/substrate.git", default-features = false, branch = "bholdus-monthly-2021-11" }
integration-tokens = { version = "4.0.0-dev", path = "./tokens", default-features = false }
bholdus-primitives = { version = '4.0.0-dev', default-features = false, path = '../../primitives/bholdus' }

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '4.0.0-dev'

[dev-dependencies]
serde = '1.0.119'
sp-core = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
bholdus-currencies = { version = "4.0.0-dev", path = "../currencies", default-features = false }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
    "sp-std/std",
	"sp-runtime/std",
    "pallet-contracts/std",
    "integration-tokens/std",
	"bholdus-currencies/std",
	"bholdus-primitives/std",
]
try-runtime = ['frame-support/try-runtime']
