[package]
authors = ["Bholdus Technologies"]
description = "FRAME pallets integrate with smart contracts"
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = "pallet-integration"
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain.git'
version = '4.0.0-dev'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Local dependencies
[dependencies.bholdus-primitives]
default-features = false
version = '4.0.0-dev'
path = '../../primitives/bholdus'

[dependencies.bholdus-support]
default-features = false
version = '4.0.0-dev'
path = '../support'

[features]
default = ['std']
std = [
	"bholdus-primitives/std",
	"bholdus-support/std",

]

